--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,3 +23,13 @@ jobs:
 
     - name: Test
       run: go test -v ./...
+    - name: Publish Test Results
+      uses: Wasimkhandot01/publish-unit-test-result-action@v1
+      if: always()
+      with:
+       files: "test-results/**/*.xml"
+    permissions:
+     contents: read
+     issues: read
+     checks: write
+     pull-requests: write
